chore(env): :lock: update settings
change default values to env example

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,30 +1,48 @@
+# Default
 TZ=UTC
 PORT=3333
+PROTOCOL=http
 HOST=localhost
-LOG_LEVEL=info
-APP_KEY=31WSPOD5A9ghn9yUUVTvlYDXsLsuYexo
-NODE_ENV=development
 SESSION_DRIVER=cookie
+APP_KEY=31WSPOD5A9ghn9yUUVTvlYDXsLsuYexo
+
+LOG_LEVEL=debug
+QUERY_DEBUG=false
+NODE_ENV=development
+
+
+# Mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=
+DB_PASSWORD=secret
+DB_DATABASE=portal
+
+# Redis
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
-TWITTER_CLIENT_ID=
-TWITTER_CLIENT_SECRET=
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-RESEND_API_KEY=
-SMTP_HOST=
-SMTP_PORT=
+
+# Authentication
+GITHUB_CLIENT_ID=xx
+GITHUB_CLIENT_SECRET=xx
+
+GOOGLE_CLIENT_ID=xx
+GOOGLE_CLIENT_SECRET=xx
+
+LINKEDIN_CLIENT_ID=xx
+LINKEDIN_CLIENT_SECRET=xx
+
+DISCORD_CLIENT_ID=xx
+DISCORD_CLIENT_SECRET=xx
+
+TWITTER_CLIENT_ID=xx
+TWITTER_CLIENT_SECRET=xxx
+
+FACEBOOK_CLIENT_ID=xx
+FACEBOOK_CLIENT_SECRET=xx
+
+# Mail
+RESEND_API_KEY=xx
+SMTP_HOST=xx
+SMTP_PORT=xx
